<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="account">Account</string>
	<string name="add_account">Add an account</string>
	<string name="amount">Amount</string>
	<string name="api_key">API Key</string>
	<string name="api_key_information">To take advantage of all the features provided by this application, make sure that your API key grant access to the following permissions: …</string>
	<string name="app_name">Bitstamp (unofficial)</string>
	<string name="ask">Ask</string>
	<string name="back">Back</string>
	<string name="balance">Balance</string>
	<string name="bid">Bid</string>
	<string name="buy">Buy</string>
	<string name="cancel">Cancel</string>
	<string name="connection_error">Unable to connect to Bitstamp. Please check your User Id, API key and Secret.</string>
	<string name="deposit">Deposit</string>
...
	<string name="id_prefix">#</string>
	<string name="login">Login</string>
	<string name="login_now">Login now</string>
	<string name="login_with">Login with</string>
	<string name="low_24">24h low</string>
	<string name="market_trade">Market Trade</string>
	<string name="next">Next</string>
	<string name="no_api_key">Please enter your API key</string>
	<string name="no_pin_code">Please enter a PIN code</string>
	<string name="no_secret">Please enter your secret</string>
	<string name="no_user_id">Please enter your User Id</string>
	<string name="order_book">Order Book</string>
	<string name="orders">Orders</string>
	<string name="overview">Overview</string>
	<string name="pin_code">PIN Code</string>
	<string name="pin_code_information">Enter a PIN code that you will need to provide to access your account. It must be between <xliff:g example="4" id="min">%1$d</xliff:g> and <xliff:g example="8">%2$d</xliff:g> digits.</string>
	<string name="positions">Positions</string>
...
	<string name="save_account">Save account</string>
	<string name="secret">Secret</string>
	<string name="sell">Sell</string>
	<string name="status">Status</string>
	<string name="sub_account_transfer">Sub Account Transfer</string>
	<string name="transactions">Transactions</string>
	<string name="user_id">User Id</string>
	<string name="value">Value</string>
	<string name="volume">Volume</string>
	<string name="vwap">VWAP</string>
	<string name="withdrawal">Withdrawal</string>
	<string name="wrong_pin_code">Wrong PIN code</string>
</resources>
...
