<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/add_account_user_id"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	tools:context=".fragment.AddAccountUserIdFragment">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/user_id_layout"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin"
			android:layout_marginEnd="@dimen/margin"
			android:layout_marginStart="@dimen/margin"
			android:layout_marginTop="@dimen/margin"
			android:hint="@string/user_id"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/user_id"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionGo"
				android:inputType="text">

				<requestFocus />
			</android.support.design.widget.TextInputEditText>
		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/next"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin"
			android:layout_marginEnd="@dimen/margin"
			android:text="@string/next"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent" />
	</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
