...
	<item
		android:id="@+id/menu_positions"
		android:icon="@drawable/ic_positions"
		android:title="@string/positions" />

	<item
		android:id="@+id/menu_account"
		android:icon="@drawable/ic_account"
		android:title="@string/account" />
</menu>

